--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "paulzi/yii2-nested-sets": "^1.1",
-        "wokster/yii2-nested-sets-tree-behavior": "^1.0"
+        "creocoder/yii2-nested-sets": "^0.9.0",
+        "wokster/yii2-nested-sets-tree-behavior": "^1.0",
+        "wbraganca/yii2-fancytree-widget": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
