--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "creocoder/yii2-nested-sets": "^0.9.0",
         "wokster/yii2-nested-sets-tree-behavior": "^1.0",
-        "gudezi/yii2-fancytree-widget": "*"
+        "gudezi/yii2-fancytree-widget": "*",
+        "kartik-v/yii2-widget-depdrop": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
